2001-03-15  Radek Doulik  <rodo@ximian.com>

	* htmltable.c (accepts_cursor): accept cursor

	* htmlobject.c (move_object_downtree): stop on containers, which
	accepts cursor (like tables)

2001-03-18  Larry Ewing  <lewing@ximian.com>

	* keybindingsrc.emacs: add bindings for space-and-fill and
	break-and-fill for testing.

	* htmlengine.c: fix more warnings I left.

	* gtkhtml.c (command): add handlers for the space-and-fill and
	break-and-fill.

	* gtkhtml-properties.c: add enum entries for space-and-fill, and
	break-and-fill.

	* htmlengine-edit.h (clueflow_style_to_paragraph_style): add
	prototypes

	* htmlengine-edit.c (html_engine_fill_pre_line): utility function
	to word wrap pre lines.
	(html_engine_space_and_fill_line): insert space then fill line.
	(html_engine_break_and_fill_line): fill line then insert paragraph.

2001-03-15  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (update_embedded): add prototype and fix warnings.

2001-03-14  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_update_event): do a container forall
	on the layout to move offscreen objects off of the screen.
	(update_embedded): a hack of a function to make sure objects get
	moved out of the way properly.
	(parse_object): remove the call to set "embeddedelement" this is
	taken care of elsewhere now.

	* htmlembedded.c (html_embedded_set_widget): set "embeddedelement"
	data on the widget.

2001-03-14  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (new_cell): set cell bgcolor, bgpixmap
	and padding
	(insert_table_column): fixed cursor position and cursor movement
	afret insertion

	* htmltext.c (calc_min_width): make minimal width be always >= 1
	(calc_preferred_width): ditto

	* htmltextslave.c (calc_size): make width be always >= 1

	* htmlengine-edit-table.c (html_engine_insert_table_1_1): create
	width=100% table

2001-03-13  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_object_changed): call html_object_calc_size