@@ -36,7 +36,6 @@ gtk_html_stream_new (GtkHTML *html,
 
 	new_stream->write_func = write_func;
 	new_stream->close_func = close_func;
-
 	new_stream->user_data = user_data;
 	
 	return new_stream;
@@ -73,4 +72,71 @@ gtk_html_stream_close (GtkHTMLStream *stream,
 		stream->close_func (stream, status, stream->user_data);
 	
 	gtk_html_stream_destroy (stream);
+}
+
+typedef struct _GtkHTMLLog GtkHTMLLog;
+struct _GtkHTMLLog {
+	GtkHTMLStream *stream;
+	FILE *file;
+};
+
+static void
+stream_log_write (GtkHTMLStream *stream,
+	       const gchar *buffer,
+	       size_t size,
+	       gpointer user_data)
+{
+	GtkHTMLLog *log = user_data;
+	gint i;
+
+	for (i=0; i<size; i++)
+		fprintf (log->file, "%c", buffer [i]);
+
+        gtk_html_stream_write (log->stream, buffer, size);
+
+}
+
+static void
+stream_log_close (GtkHTMLStream *stream,
+	       GtkHTMLStreamStatus status,
+	       gpointer user_data)
+{
+	GtkHTMLLog *log = user_data;
+	
+	fclose (log->file);
+	gtk_html_stream_close (log->stream, status);
+
+	g_free (log);
+}
+
+GtkHTMLStream *
+gtk_html_stream_log_new (GtkHTML *html,
+			 GtkHTMLStreamWriteFunc write_func,
+			 GtkHTMLStreamCloseFunc close_func,
+			 gpointer user_data)
+{
+	GtkHTMLLog *log;
+	GtkHTMLStream *new_stream;
+	gchar *fname;
+	static int log_num = 0;
+
+	log = g_new (GtkHTMLLog, 1);
+	log->stream = gtk_html_stream_new (html,
+					   write_func,
+					   close_func,
+					   user_data);
+	
+	
+	fname = g_strdup_printf ("gtkhtml.log.%d", log_num);
+	log->file = fopen (fname, "w+");
+	g_free (fname);	
+
+	log_num ++;
+
+	new_stream = gtk_html_stream_new (html,
+					  stream_log_write,
+					  stream_log_close,
+					  log);
+					  
+	return new_stream;
 }
